# YouTubeDL

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: docker.yml
youtubedl/: app.py
youtubedl/static/: script.js  style.css
youtubedl/templates/: index.html
